# fishnet

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  install.sh  vcpkg.json
app/: CMakeLists.txt
app/africapolis-workflow/: AfricapolisGraphComponents.cpp  AfricapolisPolygonOutline.cpp  CMakeLists.txt  ClearDatabase.cpp
app/examples/: CMakeLists.txt
app/examples/geotiff_to_shapefile/: CMakeLists.txt  GeotiffToShapefile.cpp
app/examples/polygon_graph/: CMakeLists.txt  PolygonGraph.cpp
app/examples/settlement_filter/: CMakeLists.txt
app/examples/settlement_patterns/: Areaclass.hpp  SettlementPatterns.cpp
app/examples/split_shapefile/: CMakeLists.txt  ShapeSplitter.cpp
app/examples/urban_network_visualizer/: WSFNetworkApplication.h  main.cpp
app/graph-database-adapter/: CipherQuery.hpp  MemgraphClient.hpp
app/sda-workflow/: Dockerfile  SettlementDelineationAnalysis.py  compose.yaml  sda-docker.json  sda-workflow.json  updateImage
app/sda-workflow/0_workflow/: CMakeLists.txt  SettlementDelineation.cpp
app/sda-workflow/1_filter/: FilterConfig.hpp
app/sda-workflow/3_components/: ConnectedComponentsTask.cpp
app/sda-workflow/4_contract/: IDReduceFunction.hpp
app/sda-workflow/5_analysis/: DegreeCentralityMeasure.hpp  EdgeVisualizer.hpp
app/sda-workflow/cwl/: analysis.cwl  components.cwl  contraction.cwl  filter.cwl  neighbours.cwl  sda-workflow.cwl
app/sda-workflow/shared/: CMakeLists.txt
app/sda-workflow/src/: CMakeLists.txt
app/settlement_delineation_pattern_analysis/: CMakeLists.txt
app/settlement_delineation_pattern_analysis/0_job_generator/: JobGenerator.cpp  JobGenerator.hpp  JobGeneratorConfig.hpp  NeighbouringFilesPredicates.hpp
app/settlement_delineation_pattern_analysis/0_scheduler/: CwlToilExecutor.hpp  CwlToolExecutor.hpp  Executor.hpp  Scheduler.cpp  Scheduler.hpp  SchedulerConfig.hpp
app/settlement_delineation_pattern_analysis/0_workflow/: CMakeLists.txt  CwlToilExecutor.hpp  CwlToolExecutor.hpp  Executor.hpp  JobGenerator.hpp  NeighbouringFilesPredicates.hpp  Scheduler.hpp  SettlementDelineation.cpp  SettlementDelineation.h  SettlementDelineationConfig.hpp
app/settlement_delineation_pattern_analysis/1_filter/: ApproxAreaFilter.hpp  AreaFilter.cpp  AreaFilter.hpp  CMakeLists.txt  Filter.hpp  FilterConfig.hpp  FilterConfigJsonReader.hpp  ProjectedAreaFilter.hpp  SettlementFilter.cpp  SettlementFilter.h  SettlementFilterTask.cpp  SettlementFilterTask.h  filter.cwl  filter.json
app/settlement_delineation_pattern_analysis/2_neighbours/: CMakeLists.txt  FindNeighboursConfig.hpp  FindNeighboursTask.cpp  FindNeighboursTask.h  NeighboursConfigJsonReader.hpp  SettlementPolygon.hpp
app/settlement_delineation_pattern_analysis/3_components/: CMakeLists.txt  ConnectedComponentsConfig.hpp  ConnectedComponentsTask.cpp  ConnectedComponentsTask.h
app/settlement_delineation_pattern_analysis/3_contract/: ContractionConfig.hpp  ContractionTask.cpp  ContractionTask.h  IDReduceFunction.hpp
app/settlement_delineation_pattern_analysis/3_contraction/: query.txt
app/settlement_delineation_pattern_analysis/4_analysis/: AnalysisConfig.cpp  AnalysisTask.cpp  AnalysisTask.h  CentralityMeasureJsonReader.hpp  CentralityMeasureType.hpp  EdgeVisualizer.hpp
app/settlement_delineation_pattern_analysis/4_contract/: CMakeLists.txt  ContractionTask.cpp  ContractionTask.h  IDReduceFunction.hpp
app/settlement_delineation_pattern_analysis/5_analysis/: AnalysisTask.cpp  AnalysisTask.h  CMakeLists.txt  CentralityMeasureJsonReader.hpp  MeanLocalSignificance.hpp  SmallerNeighboursRatio.hpp
app/settlement_delineation_pattern_analysis/6_merge/: MergeShapefilesTask.cpp  MergeShapefilesTask.h
app/settlement_delineation_pattern_analysis/cfg/: analysis.json  cfg.json  components.json  contract.json  contraction.json  filter.json  (+2 more)
app/settlement_filter/: SettlementFilter.cpp
app/settlement_patterns/: CMakeLists.txt  SettlementPatterns.cpp
app/shapefile-splitter/: CMakeLists.txt  ShapeSplitter.cpp
app/shapefile_splitter/: ShapeSplitter.cpp
app/urban_network_visualizer/: WSFNetworkApplication.cpp  WSFNetworkApplication.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/geometry/: CMakeLists.txt
lib/graph/: CMakeLists.txt
lib/io/: CMakeLists.txt  Feature.hpp  FieldDefinition.hpp  FieldType.hpp  VectorLayer.hpp
lib/legacy/: Parameters.cpp  Parameters.h  PathHelper.cpp
lib/math/: CMakeLists.txt  Constants.hpp  Degrees.cpp  Radians.cpp
lib/util/: CMakeLists.txt  UtilConcepts.hpp
lib/visualization/: NetworkVisualization.cpp
lib/workflow/: CMakeLists.txt
tests/: CMakeLists.txt
tests/coverage/: CodeCoverage.sh  coverage.info
tests/geometry/: CMakeLists.txt  CharacteristicShapeTest.cpp  LineTest.cpp  MultiPolygonTest.cpp  PolygonNeighboursTest.cpp  PolygonTest.cpp  RayTest.cpp  RingTest.cpp  SegmentTest.cpp  SimplePolygonTest.cpp  SweepLineTest.cpp  Vec2DTest.cpp  kNearestNeighboursTest.cpp
tests/graph/: CMakeLists.txt  CentralityTest.cpp  ConncectedComponentsTest.cpp  ContractionPerformance.cpp  ContractionTest.cpp  DAGTest.cpp  DirectedGraphTest.cpp  EdgeTest.cpp  JSONAdjacencyTest.cpp  MemgraphTest.cpp  SearchPathTest.cpp  UndirectedGraphTest.cpp  WeightedGraphTest.cpp
tests/io/: CMakeLists.txt  FeatureTest.cpp  FieldDefinitionTestFactory.hpp  GeoPackageTest.cpp  GeotiffTest.cpp  OGRAdapterTest.cpp  ShapefileIOTest.cpp  ShapefileTest.cpp  VectorLayerTest.cpp  WGS84DistanceTest.cpp  WGS84Test.cpp
tests/math/: CMakeLists.txt  DegreeTest.cpp  NormalizeTest.cpp  RadiansTest.cpp  WGS84DistanceTest.cpp
tests/sandbox/: CMakeLists.txt  CRTPExample.h  Concepts.h  Data.h  Sandbox.cpp  TestCompile.cpp
tests/testutils/: Testutil.h
tests/util/: AlternativeKeyMapTest.cpp  BlockingQueueTest.cpp  CMakeLists.txt  NestedMapTest.cpp  PathHelperTest.cpp  TemporaryDirectoryTest.cpp
tests/workflow/: CMakeLists.txt  CipherQueryTest.cpp  ConcurrentSessionsTest.cpp  FilterTest.cpp  JobAdjacencyTest.cpp  MemgraphAdjacencyTest.cpp  MemgraphTest.cpp  PolygonDistanceTest.cpp  WorkflowTestEnvironment.hpp
(+1410 files in other folders)
