if (MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -Wpedantic -Wconversion -Wno-unused-parameter -Wno-unused-function -fconcepts-diagnostics-depth=4)
endif()
include(${CMAKE_SOURCE_DIR}/extern/cli11.cmake)
include(${CMAKE_SOURCE_DIR}/extern/json.cmake)
include(${CMAKE_SOURCE_DIR}/extern/magic_enum.cmake)
add_subdirectory(shapefile_splitter)
add_subdirectory(settlement_delineation_pattern_analysis)
add_subdirectory(examples)