if (MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -Wpedantic -Wconversion -Wno-unused-parameter -Wno-unused-function -fconcepts-diagnostics-depth=4)
endif()
include(${FISHNET_SOURCE_DIR}/extern/cli11.cmake)
include(${FISHNET_SOURCE_DIR}/extern/json.cmake)
include(${FISHNET_SOURCE_DIR}/extern/magic_enum.cmake)
add_subdirectory(shapefile_splitter)
add_subdirectory(sda-workflow)
add_subdirectory(examples)