if (MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -Wpedantic -Wconversion -Wno-unused-parameter -Wno-unused-function -fconcepts-diagnostics-depth=4)
endif()
include(GoogleTest)
add_subdirectory(graph)
add_subdirectory(io)
add_subdirectory(geometry)
add_subdirectory(util)
add_subdirectory(sandbox)
add_subdirectory(math)
if(FISHNET_Apps)
    add_subdirectory(workflow)
endif()
add_library(testutil INTERFACE)
target_include_directories(testutil INTERFACE ${CMAKE_CURRENT_LIST_DIR}/testutils)
target_link_libraries(testutil INTERFACE gtest_main util_collections math)