set(WORKFLOW_NAME "SettlementDelineation")
add_subdirectory(shared)
add_subdirectory(0_scheduler)
add_subdirectory(0_job_generator)
add_subdirectory(0_workflow)
add_subdirectory(1_filter)
add_subdirectory(2_neighbours)
add_subdirectory(3_components)
add_subdirectory(4_contract)
add_subdirectory(5_analysis)
add_subdirectory(6_merge)
