add_library(util_collections_concepts INTERFACE)
target_include_directories(util_collections_concepts INTERFACE ${CMAKE_CURRENT_LIST_DIR}/concepts)


add_library(util_collections INTERFACE)
target_include_directories(util_collections INTERFACE ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(util_collections INTERFACE util_concepts util_hashing)