add_subdirectory(settlement)
add_subdirectory(filters)
add_subdirectory(neighbourPredicates)
add_subdirectory(task)
add_subdirectory(job)
set(WORKFLOW_LIB WorkflowLib)
add_library(${WORKFLOW_LIB} INTERFACE)
target_link_libraries(${WORKFLOW_LIB} INTERFACE settlementLib filtersLib neighbourPredicateLib jobLib  memgraphAdapter taskLib CLI11::CLI11 nlohmann_json::nlohmann_json magic_enum::magic_enum)
add_library(${LIBRARY_NAME}::${WORKFLOW_LIB} ALIAS ${WORKFLOW_LIB} )
